test_case/rust-lang_rust/32403_199706921.rs

use ::super::foo; //~ ERROR expected identifier, found keyword `super`
